alfa problem load

--- a/index.html
+++ b/index.html
@@ -44,11 +44,32 @@
             width: 100px;
             position: absolute;
         }
+
+        .load{
+            display: none;
+        }
     </style>
 </head>
 
 <body>
     <div class="inner">
+        <img class="load" src="avatar-med/avatar.png" alt="">
+        <img class="load" src="avatar-med/avatarBack.png" alt="">
+        <img class="load" src="avatar-med/avatarGo1.png" alt="">
+        <img class="load" src="avatar-med/avatarGo2.png" alt="">
+        <img class="load" src="avatar-med/avatarGoBack1.png" alt="">
+        <img class="load" src="avatar-med/avatarGoBack2.png" alt="">
+        <img class="load" src="avatar-med/avatarGoLeft.gif" alt="">
+        <img class="load" src="avatar-med/avatarGoLeft1.png" alt="">
+        <img class="load" src="avatar-med/avatarGo2.png" alt="">
+        <img class="load" src="avatar-med/avatarGoRight1.png" alt="">
+        <img class="load" src="avatar-med/avatarGoRight2.png" alt="">
+        <img class="load" src="avatar-med/avatarGoLeft2.png" alt="">
+        <img class="load" src="avatar-med/avatarLeftTop.png" alt="">
+        <img class="load" src="avatar-med/avatar.png" alt="">
+        <img class="load" src="avatar-med/avatar.png" alt="">
+        <img class="load" src="avatar-med/avatar.png" alt="">
+
         <div class="container">
             <img src="avatar-med/avatar.png" alt="" class="avatar">
         </div>
