--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
             align-items: center;
             width: 50000px;
             height: 50000px;
-            background-color: blue;
+            background-image: url("bg/trees.png");
+            background-color: #5DB159;
         }
 
         .container {
             width: 10000px;
             height: 10000px;
-            border: 1px solid rgb(66, 92, 66);
+            /* border: 1px solid rgb(66, 92, 66); */
             margin-top: 5px;
             position: relative;
             z-index: 5;
-            background-image: url("bg/1bg.png");
-
+            background-image: url("bg/back.png");
+            box-shadow: 0 0 170px 140px #5DB159;
         }
 
         .avatar {
@@ -45,39 +46,90 @@
             position: absolute;
         }
 
-        .load{
+        .load {
             display: none;
+        }
+
+        .wood {
+            width: 200px;
+            position: absolute;
+            left: 500px;
+            top: 500px;
+            cursor: pointer;
+        }
+
+        #point {
+            background-color: red;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            position: absolute;
+            z-index: 10;
+        }
+
+        .banch {
+            animation-name: banch;
+            animation-duration: 0.25s;
+        }
+
+        @keyframes banch {
+            25% {
+                transform: translateX(3px) translateY(3px);
+
+            }
+
+            50% {
+                transform: translateX(-3px) translateY(-3px);
+            }
+
+            75% {
+                transform: translateX(3px) translateY(3px);
+
+            }
+
+            100% {
+                transform: translateX(0px) translateY(0px);
+            }
         }
     </style>
 </head>
 
 <body>
     <div class="inner">
-        <img class="load" src="avatar-med/avatar.png" alt="">
-        <img class="load" src="avatar-med/avatarBack.png" alt="">
-        <img class="load" src="avatar-med/avatarGo1.png" alt="">
-        <img class="load" src="avatar-med/avatarGo2.png" alt="">
-        <img class="load" src="avatar-med/avatarGoBack1.png" alt="">
-        <img class="load" src="avatar-med/avatarGoBack2.png" alt="">
-        <img class="load" src="avatar-med/avatarGoLeft.gif" alt="">
-        <img class="load" src="avatar-med/avatarGoLeft1.png" alt="">
-        <img class="load" src="avatar-med/avatarGo2.png" alt="">
-        <img class="load" src="avatar-med/avatarGoRight1.png" alt="">
-        <img class="load" src="avatar-med/avatarGoRight2.png" alt="">
-        <img class="load" src="avatar-med/avatarGoLeft2.png" alt="">
-        <img class="load" src="avatar-med/avatarLeftTop.png" alt="">
-        <img class="load" src="avatar-med/avatar.png" alt="">
-        <img class="load" src="avatar-med/avatar.png" alt="">
-        <img class="load" src="avatar-med/avatar.png" alt="">
+        <div class="inner__load">
+            <img class="load" src="avatar-med/avatar.png" alt="">
+            <img class="load" src="avatar-med/avatarBack.png" alt="">
+            <img class="load" src="avatar-med/avatarGo1.png" alt="">
+            <img class="load" src="avatar-med/avatarGo2.png" alt="">
+            <img class="load" src="avatar-med/avatarGoBack1.png" alt="">
+            <img class="load" src="avatar-med/avatarGoBack2.png" alt="">
+            <img class="load" src="avatar-med/avatarGoLeft.gif" alt="">
+            <img class="load" src="avatar-med/avatarGoLeft1.png" alt="">
+            <img class="load" src="avatar-med/avatarGo2.png" alt="">
+            <img class="load" src="avatar-med/avatarGoRight1.png" alt="">
+            <img class="load" src="avatar-med/avatarGoRight2.png" alt="">
+            <img class="load" src="avatar-med/avatarGoLeft2.png" alt="">
+            <img class="load" src="avatar-med/avatarLeftTop.png" alt="">
+            <img class="load" src="avatar-med/avatar.png" alt="">
+            <img class="load" src="avatar-med/avatar.png" alt="">
+            <img class="load" src="avatar-med/avatar.png" alt="">
+        </div>
+        <div id="point">
 
+        </div>
         <div class="container">
             <img src="avatar-med/avatar.png" alt="" class="avatar">
+            <img src="" class="wood"></img>
         </div>
     </div>
-    <script src="js/Go.js"></script>
-    <script src="js/Rotate.js"></script>
-    <script src="js/Animation.js"></script>
-    <script src="js/DocumentListener.js"></script>
+    <script src="js/Cordinate.js"></script>
+    <script src="js/avatar/Go.js"></script>
+    <script src="js/avatar/Rotate.js"></script>
+    <script src="js/avatar/Animation.js"></script>
+    <script src="js/avatar/DocumentListener.js"></script>
+    <script src="js/avatar/Avatar.js"></script>
+    <script src="js/items/Tree.js"></script>
+    <script src="js/items/TreeInner.js"></script>
     <script src="js/result.js"></script>
 </body>
 
