--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         body {
             margin: 0;
+            overflow: hidden;
         }
 
         .inner {
@@ -37,7 +38,15 @@
             position: relative;
             z-index: 5;
             background-image: url("bg/back.png");
-            box-shadow: 0 0 170px 140px #5DB159;
+            /* box-shadow: 0 0 170px 140px #5DB159; */
+            
+            /* border-image-source: url(bg/trees.png);
+            border-image-width: 1;
+            border-image-slice: 100%;
+            border-image-outset: 0;
+            border-image-repeat: stretch; */
+            /* border-image: url("bg/trees.png") 27 23 / 50px 30px / 1rem round space; */
+            
         }
 
         .avatar {
